--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/PreviewEmail.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/PreviewEmail.cshtml
@@ -176,25 +176,28 @@
                             ViewContext.Writer.Write("</tr><tr>");
                         }
                         dropNum++;
-                        var creativeStat0 = drop.CreativeStats.First();
+                        var creativeStat0 = drop.CreativeStats.FirstOrDefault();
 
                         <td align="left" valign="top" width="208" style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;">
                             <b>Drop @dropNum:</b> @drop.Date<br />
                             <b>From:</b> @drop.FromEmail<br />
                             <b>Subject:</b> @drop.Subject<br />
-                            @if (creativeStat0.Thumbnail != null)
-                            {@* Have a thumbnail... *@
-                                string imgUrl = PortalUrl + Url.Action("Thumbnail", "Creatives", new { id = creativeStat0.CreativeId });
-                                if (creativeStat0.Link != null)
-                                {
-                                    <a href="@creativeStat0.Link"><img src="@imgUrl" /></a>
-                                } else {
-                                    <img src="@imgUrl" />
-                                }
-                            } else {@* No thumbnail... *@
-                                if (creativeStat0.Link != null)
-                                {
-                                    <a href="@creativeStat0.Link">View Creative</a>
+                            @if (creativeStat0 != null)
+                            {
+                                if (creativeStat0.Thumbnail != null)
+                                {@* Have a thumbnail... *@
+                                    string imgUrl = PortalUrl + Url.Action("Thumbnail", "Creatives", new { id = creativeStat0.CreativeId });
+                                    if (creativeStat0.Link != null)
+                                    {
+                                        <a href="@creativeStat0.Link"><img src="@imgUrl" /></a>
+                                    } else {
+                                        <img src="@imgUrl" />
+                                    }
+                                } else {@* No thumbnail... *@
+                                    if (creativeStat0.Link != null)
+                                    {
+                                        <a href="@creativeStat0.Link">View Creative</a>
+                                    }
                                 }
                             }
                         </td>
