cpm fix: in # drops column, show # of _originals_ only

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Offers/Show.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Offers/Show.cshtml
@@ -48,7 +48,7 @@ Campaigns:
         <td>@campaign.CampaignName</td>
         <td>@campaign.AffiliateId</td>
         <td>@campaign.Affiliate.AffiliateName</td>
-        <td>@campaign.CampaignDrops.Count</td>
+        <td>@campaign.CampaignDrops_Originals.Count()</td>
         <td>@Ajax.ActionLink("New Drop", "Create", "CampaignDrops", new { campaignid = campaign.CampaignId, from = "offer" }, ajaxOpts_Drop)</td>
     </tr>
 }
