--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Creatives/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Creatives/Index.cshtml
@@ -4,13 +4,18 @@
     var ajaxOpts_ConfirmSynch = RazorHelpers.GetAjaxOptions("cpmCreativesTab", null, "Get", "Synch Creatives?");
     var ajaxOpts_ConfirmOverwrite = RazorHelpers.GetAjaxOptions("cpmCreativesTab", null, "Get", "This will overwrite existing changes. Are you sure?");
     var ajaxOpts_ConfirmDeleteThumb = RazorHelpers.GetAjaxOptions("cpmCreativesTab", null, "Get", "Are you sure you want to delete this thumbnail?");
+
     ClientPortal.Data.Contexts.Offer offer = (ClientPortal.Data.Contexts.Offer)ViewData["offer"];
+    bool showActions = ViewBag.ShowActions ?? true;
+    string title = ViewBag.Title ?? "Creatives:";
 }
 
 @if (offer == null)
 {
-    @Ajax.ActionLink("Refresh", "Index", "Creatives", ajaxOptions)
-} else {
+    @title
+}
+else
+{
     <text>Offer: </text><b>@offer.DisplayName</b><br />
     @Ajax.ActionLink("Synch Creatives", "Synch", "Creatives", new { offerid = offer.OfferId }, ajaxOpts_ConfirmSynch)<text> | </text>
     @Ajax.ActionLink("Synch With Overwrite", "Synch", "Creatives", new { offerid = offer.OfferId, overwrite = true }, ajaxOpts_ConfirmOverwrite)<text> | </text>
@@ -19,31 +24,45 @@
 }
 <table border="1">
     <tr>
-        <th></th>
+        @if (showActions) {
+            <th></th>
+        }
         <th>Creative Name</th>
         <th>Type</th>
         <th>Created</th>
         <th>Width</th>
         <th>Height</th>
         <th>Files</th>
-        <th>Thumbnail</th>
+        @if (showActions) {
+            <th>Thumbnail</th>
+        }
     </tr>
 @foreach (var creative in Model)
 {
     <tr>
-        <td>@Ajax.ActionLink("Edit", "Edit", "Creatives", new { id = creative.CreativeId }, ajaxOptions)</td>
+        @if (showActions) {
+            <td>@Ajax.ActionLink("Edit", "Edit", "Creatives", new { id = creative.CreativeId }, ajaxOptions)</td>
+        }
         <td>@creative.DisplayName</td>
         <td>@creative.CreativeType.CreativeTypeName</td>
         <td>@creative.DateCreated.ToShortDateString()</td>
         <td>@creative.Width</td>
         <td>@creative.Height</td>
-        <td>@Ajax.ActionLink(creative.CreativeFiles.Count.ToString(), "Index", "CreativeFiles", new { creativeid = creative.CreativeId }, ajaxOptions)</td>
-        <td>@Ajax.ActionLink((creative.Thumbnail == null ? "Add" : "View/Edit"), "EditThumbnail", "Creatives", new { id = creative.CreativeId }, ajaxOptions)
-        @if (creative.Thumbnail != null)
-        {
-            <text> | </text>@Ajax.ActionLink("Delete", "DeleteThumbnail", "Creatives", new { id = creative.CreativeId }, ajaxOpts_ConfirmDeleteThumb)
-        }
+        <td>
+            @if (showActions) {
+                @Ajax.ActionLink(creative.CreativeFiles.Count.ToString(), "Index", "CreativeFiles", new { creativeid = creative.CreativeId }, ajaxOptions)
+            } else {
+                @creative.CreativeFiles.Count
+            }
         </td>
+        @if (showActions) {
+            <td>@Ajax.ActionLink((creative.Thumbnail == null ? "Add" : "View/Edit"), "EditThumbnail", "Creatives", new { id = creative.CreativeId }, ajaxOptions)
+            @if (creative.Thumbnail != null)
+            {
+                <text> | </text>@Ajax.ActionLink("Delete", "DeleteThumbnail", "Creatives", new { id = creative.CreativeId }, ajaxOpts_ConfirmDeleteThumb)
+            }
+            </td>
+        }
     </tr>
 }
 </table>
